[Communication - email] Migrate test recordings to assets repo (#35805)